<resources>
    <string name="app_name">贴呗计算</string>
    <string name="t_title_compute">贴呗-贴现计算器</string>
    <string name="t_title_calculator">贴呗计算器</string>
    <string name="t_str_one_year">一年电</string>
    <string name="t_str_half_year">半年电</string>
    <string name="t_str_half_paper">半年纸</string>
    <string name="t_str_date_week">星期</string>
    <string name="t_str_rate_compute">利率换算</string>

    <string name="t_str_warmming_tip">温馨提示</string>
    <string name="t_str_exit_tip">是否退出</string>

    <string name="t_str_rate_year">年利率(%)：</string>
    <string name="t_str_rate_month">月利率(‰)：</string>

    <string name="t_btn_comfirm">确定</string>
    <string name="t_btn_cancel">取消</string>
    <string name="t_btn_clear">清空</string>
    <string name="t_btn_compute">计算</string>
    <string name="t_btn_rate">利率换算</string>

    <!-- 金额格式化 -->
    <string name="default_format">###,##0.##</string>
    <string name="str_default_format">###,##0</string>
    <string name="default_decimal_separator">\'</string>
    <string name="str_decimal_separator">.</string>

    <!-- Displayed numbers for the digit buttons -->
    <string name="digit0">0</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit1">1</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit2">2</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit3">3</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit4">4</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit5">5</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit6">6</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit7">7</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit8">8</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit9">9</string>
    <!-- Do not translate. Decimal point; don't translate. Displayed as button on screen. -->
    <string name="dot">.</string>
    <!-- Do not translate. Equal sign; don't translate. Displayed as button on screen. -->
    <string name="equal">=</string>
    <!-- Do not translate. Unicode division sign; don't translate. Displayed as button on screen. -->
    <string name="div">\u00f7</string>
    <!-- Do not translate. Unicode multiplication sign; don't translate. Displayed as button on screen. -->
    <string name="mul">\u00d7</string>
    <!-- Do not translate. Plus sign, displayed as button on screen -->
    <string name="plus">+</string>
    <!-- Do not translate. Unicode minus sign; don't translate. Displayed as button on screen. -->
    <string name="minus">\u2212</string>
    <!-- Button name on screen to clear the entire calculation field. [CHAR LIMIT=6] -->
    <string name="clear">AC</string>
</resources>
